# bni-mlops-mlflow

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  promote.yml  register-prompts.yml
docs/: architecture.md  troubleshooting.md
docs/recipes/: custom.md  langchain.md  openai.md
docs/superpowers/plans/: 2026-04-28-bni-llmops-foundation.md
docs/superpowers/specs/: 2026-04-28-bni-llmops-design.md
prompts/: _schema.py  agent_demo.yaml
scripts/: backup.sh  restore.sh  validate_prompts.py
src/llmops/: __init__.py  _autolog.py  _config.py  _mlflow_adapter.py  _prompt_schema.py  cli.py  exceptions.py  prompts.py  tracing.py
tests/integration/: test_backup_restore.py  test_compose_smoke.py
tests/unit/: test_autolog.py  test_cli_doctor.py  test_cli_list_prompts.py  test_cli_promote.py  test_cli_register_prompts.py  test_cli_skeleton.py  test_config.py  test_exceptions.py  test_mlflow_adapter.py  test_prompt_demo_yaml.py  test_prompt_schema.py  test_prompts.py  test_public_api.py  test_tracing.py  test_validate_prompts_script.py
