[project]
name = "bni-llmops"
version = "0.1.0"
description = "BNI LLM Ops SDK — framework-agnostic tracing + prompt registry on top of MLflow"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "mlflow>=3.11,<4",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.21",
]

[project.scripts]
llmops = "llmops.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmops"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "TID"]

[tool.ruff.lint.flake8-tidy-imports]
banned-module-level-imports = ["mlflow"]

[tool.ruff.lint.per-file-ignores]
"src/llmops/_mlflow_adapter.py" = ["TID253"]
"tests/**" = ["TID253"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/llmops"]
branch = true
